Fix visibility of title color.

--- a/src/style.css
+++ b/src/style.css
@@ -14,25 +14,25 @@ h2 {
 .nd-pageheader {
   padding: 2rem 15px;
   margin-bottom: 1.5rem;
-  color: #3C2013;
+  color: #EECCEE;
   text-align: center;
   background-color: #9600FC;
 }
 
 .nd-pageheader a, .nd-pageheader a.likelink {
-  color: #3C2013;
+  color: #EECCEE;
 }
 
 .nd-pagefooter {
   margin-top: 1.5rem;
   padding: 1rem;
-  color: #3C2013;
+  color: #EECCEE;
   text-align: center;
   background-color: #9600FC;
 }
 
 .nd-pagefooter a {
-  color: #3C2013;
+  color: #EECCEE;
 }
 
 .nd-pageheader .container {
